feat(api): add user and admin login, fix(api): fixed some api
