# backend/api/openapi.yaml
@@ -174,6 +174,8 @@ components:
         - first_name
         - last_name
         - bio
+        - login
+        - is_admin
       properties:
         id:
           type: integer
@@ -183,6 +185,10 @@ components:
         last_name:
           type: string
         bio:
+          type: string
+        is_admin:
+          type: boolean
+        login:
           type: string
 
     Team:
@@ -293,7 +299,7 @@ components:
 
 paths:
 
-  /api/healthchek:
+  /api/healthcheсk:
     get:
       summary: check if service if healthy
       responses:
